--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
     name: taskmanager-app
-    env: java
-    buildCommand: ./mvnw clean package
-    startCommand: java -jar target/taskmanager-0.0.1-SNAPSHOT.jar
+    runtime: docker
+    repo: https://github.com/nishanithya/TaskManagement
     plan: free
+    dockerfilePath: ./taskmanager/Dockerfile
